Didn't build on FreeBSD because it does not define SOL_TCP

Replaced SOL_TCP with getprotobyname("TCP")->p_proto

BUG: 324766